--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Thalia's Website</title>
 </head>
 
 <body>
+	<h1>Thalia Website </h1>
 </body>
 </html>
