Added meta information

--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="UTF-8">
-<title>Untitled Document</title>
-</head>
+	<head>
+	<meta charset="UTF-8">
+	<title>Thalia · Creative Graphic Designer</title>
+	<meta name="description" content="Thalia, Junior Graphic Designer, Portfolio, Ottawa, Canada">
+	<!-- Faebook Open graph meta tags. Also works on Pinterest -->
+	<meta property="og:type" content="website">
+	<meta property= "og:title" content="Thalia · Creative Graphic Designer · Portfolio">
+	<meta property= "og:url" content="http://wwww.thaliadesign.info">
+	<meta property= "og:site_name" content="Thalia Portfolio-Artwork">
+	<meta property= "og:description" content="Portfolio of Thalia, Original Graphic Designer at Ottawa, Canada">
+	<!-- Can have up to 5 images -->
+	<meta property= "og:image" content="">
+	<meta property= "og:image" content="">
+	<meta property= "og:image" content="">
+	<meta property= "og:image" content="">
+	<meta property= "og:image" content="">
+	<!-- Twitter meta tags -->
+	<meta name="twitter:card" content="gallery">
+	<meta name="twitter:title" content="">
+	<meta name="twitter:url" content="">
+	<meta name="twitter:description" content="">
+	<meta name="twitter:image0" content="">
+	<meta name="twitter:image1" content="">
+	<meta name="twitter:image2" content="">
+	<meta name="twitter:image3" content="">
+	</head>
 
 <body>
 </body>
