Linked my css to my html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 	<meta name="twitter:image1" content="">
 	<meta name="twitter:image2" content="">
 	<meta name="twitter:image3" content="">
+	
+	<link rel="stylesheet" href="css/skel.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style-xlarge.css">
+	
+	
 	</head>
 
 <body>
