Header code and style

--- a/index.html
+++ b/index.html
@@ -34,5 +34,37 @@
 	</head>
 
 <body>
+		<div id="wrapper">
+		
+		<!-- Header -->
+				<section id="header" class="skel-layers-fixed">
+					<header>
+						<span class="image avatar"><img src="images/logo.svg" alt="Thalia's Logo"></span>
+						<h1 id="logo"><a href="">Thalia</a></h1>
+						<p>My inspiration<br />
+						bring to life!</p>
+					</header>
+					<nav id="nav">
+						<ul>
+	
+							<li><a href="#one" class="active fa fa-home">Home</a></li>
+							<li><a href="#two" class="fa fa-comment-o">About</a></li>
+							<li><a href="#three" class="fa fa-asterisk">Things I Can Do</a></li>
+							<li><a href="#four" class="fa fa-paint-brush">Portfolio</a></li>
+							<li><a href="#five" class="fa fa-envelope-o">Contact</a></li>
+						</ul>
+					</nav>
+					<footer>
+						<ul class="icons">
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-behance"><span class="label">Behance</span></a></li>
+							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
+					</footer>
+				</section>
+
+
+
 </body>
 </html>
