Extra Portfolio pieces

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/style-xlarge.css">
 		
+		<script type="text/javascript" src="js/modernizr.custom.79639.js"></script> <!-- Extra Portfolio Pieces -->
 		<script src="js/modernizr.custom.js"></script> 	<!-- General -->
 		
 		
@@ -324,9 +325,54 @@
 										<span class="icon nav-close"></span>
 									</nav>
 									<div class="info-keys icon">Navigate with arrow keys</div>
-								</section><!-- // slideshow -->
-							</div><!-- // grid-gallery -->		
+								</section><!-- slideshow -->
+							</div><!-- grid-gallery -->		
 							
+							<!-- Extra Portfolio Pieces -->
+								<ul class="ch-grid">
+								<li>
+									<div class="ch-item ch-img-1">				
+										<div class="ch-info-wrap">
+											<div class="ch-info">
+												<div class="ch-info-front ch-img-1"></div>
+												<div class="ch-info-back">
+													<h3>Project #9</h3>
+													<p>by Thalia <a href="">View on Behance</a></p>
+												</div>	
+											</div>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="ch-item ch-img-2">
+										<div class="ch-info-wrap">
+											<div class="ch-info">
+												<div class="ch-info-front ch-img-2"></div>
+												<div class="ch-info-back">
+													<h3>Project #10</h3>
+													<p>by Thalia <a href="3">View on Behance</a></p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="ch-item ch-img-3">
+										<div class="ch-info-wrap">
+											<div class="ch-info">
+												<div class="ch-info-front ch-img-3"></div>
+												<div class="ch-info-back">
+													<h3>Project #11</h3>
+													<p>by Thalia <a href="">View on Behance</a></p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+							</ul>
+									
+						</div>
+					</section>
 		
 		
 		
