--- a/index.html
+++ b/index.html
@@ -375,7 +375,6 @@
 					</section>
 					
 			<!-- Five -->
-			
 					<section id="five">
 						<div class="container">
 						<h3>Contact Me</h3>
@@ -419,6 +418,16 @@ creative gusto to it.</p>
 	
 						</div>
 					</section>
+					
+			<!-- Footer -->
+					<section id="footer">
+						<div class="container">
+							<ul class="copyright">
+								<li> © 2014 Thalia Design. All rights reserved.</li>
+							</ul>
+						</div>
+					</section>
+		</div> <!--Close wrapper -->
 		
 		
 		
