css and sass files

--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@ creative gusto to it.</p>
 			new CBPGridGallery( document.getElementById( 'grid-gallery' ) );
 		</script>
 		
+		<script src="js/toucheffects.js"></script> <!-- Services -->
 							
 		<script src="js/jquery.min.js"></script> <!-- General -->
 		<script src="js/jquery.scrollzer.min.js"></script>
