Added portfolio pieces keywords

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 					<header>
 						<span class="image avatar"><img src="images/logo.svg" alt="Thalia's Logo"></span>
 						<h1 id="logo"><a href="">Thalia</a></h1>
-						<p>My inspiration<br />
-						bring to life!</p>
+						<p>I conceive ideas and<br />
+						bring them to life!</p>
 					</header>
 					<nav id="nav">
 						<ul>
@@ -197,49 +197,49 @@
 									<li>
 										<figure>
 											<img src="http://placehold.it/260x156" alt="img01"/>
-											<figcaption><h4>Project #1</h4><p>Keywords description Lorem Ipsum is simply dummy text</p></figcaption>
+											<figcaption><h4>Project #1</h4><p>Branding Tea-package</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="http://placehold.it/260x156"  alt="img02"/>
-											<figcaption><h4>Project #2</h4><p>Keywords description Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p></figcaption>
+											<figcaption><h4>Project #2</h4><p>Branding Juice-Campaign Lorem Ipsum is simply dummy text of the printing.</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="http://placehold.it/260x156"  alt="img03"/>
-											<figcaption><h4>Project #3</h4><p>Keywords description</p></figcaption>
+											<figcaption><h4>Project #3</h4><p>Branding Mustache-sauces</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="http://placehold.it/260x156"  alt="img04"/>
-											<figcaption><h4>Project #4</h4><p>Keywords description</p></figcaption>
+											<figcaption><h4>Project #4</h4><p>Print Evagelism Chocolates</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="http://placehold.it/260x156"  alt="img05"/>
-											<figcaption><h4>Project #5</h4><p>Keywords description Lorem Ipsum is simply dummy text </p></figcaption>
+											<figcaption><h4>Project #5</h4><p>Print Frozen-gift cards </p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="http://placehold.it/260x156"  alt="img06"/>
-											<figcaption><h4>Project #6</h4><p>Keywords description Lorem Ipsum is</p></figcaption>
+											<figcaption><h4>Project #6</h4><p>App</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="http://placehold.it/260x156"  alt="img01"/>
-											<figcaption><h4>Project #7</h4><p>Keywords description</p></figcaption>
+											<figcaption><h4>Project #7</h4><p>Website Dulce Amor</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
 											<img src="http://placehold.it/260x156"  alt="img01"/>
-											<figcaption><h4>Project #8</h4><p>Keywords description Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p></figcaption>
+											<figcaption><h4>Project #8</h4><p>Motion video. Typesetting industry.</p></figcaption>
 										</figure>
 									</li>
 									</ul>
@@ -331,6 +331,8 @@
 							</div><!-- grid-gallery -->		
 							
 							<!-- Extra Portfolio Pieces -->
+							
+							<h4>Need more motivation...</h4>
 								<ul class="ch-grid">
 								<li>
 									<div class="ch-item ch-img-1">				
@@ -455,7 +457,7 @@ creative gusto to it.</p>
 			} );
 		</script>
 		
-		<script src="js/toucheffects.js"></script> <!-- Services -->	
+		<!--<script src="js/toucheffects.js"></script> Services -->	
 		<script src="js/jquery.scrollzer.min.js"></script> <!-- General -->
 		<script src="js/jquery.scrolly.min.js"></script>
 		<script src="js/skel.min.js"></script>
