--- a/index.html
+++ b/index.html
@@ -387,15 +387,15 @@
 creative gusto to it.</p>
 								<form method="post" action="#">
 									<div class="row uniform">
-										<div class="6u 12u(3)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-										<div class="6u 12u(3)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+										<div class="6u 12u(3)"><input type="text" name="name" id="name" placeholder="Name"></div>
+										<div class="6u 12u(3)"><input type="email" name="email" id="email" placeholder="Email"></div>
 									</div>
 									<div class="row uniform">
-										<div class="6u 12u(3)"><input type="text" name="address" id="address" placeholder="Address" /></div>
-										<div class="6u 12u(3)"><input type="text" name="telephone" id="telephone" placeholder="Telephone" /></div>
+										<div class="6u 12u(3)"><input type="text" name="address" id="address" placeholder="Address"></div>
+										<div class="6u 12u(3)"><input type="text" name="telephone" id="telephone" placeholder="Telephone"></div>
 									</div>
 									<div class="row uniform">
-										<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+										<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject"></div>
 									</div>
 									<div class="row uniform">
 										<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
@@ -403,8 +403,8 @@ creative gusto to it.</p>
 									<div class="row uniform">
 										<div class="12u">
 											<ul class="actions">
-												<li><input type="submit" class="special" value="Send Message" /></li>
-												<li><input type="reset" value="Reset Form" /></li>
+												<li><input type="submit" class="special" value="Send Message"></li>
+												<li><input type="reset" value="Reset Form"></li>
 											</ul>
 										</div>
 									</div>
