Linked my icons

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 					</nav>
 					<footer>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-behance"><span class="label">Behance</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/ThaliaBacilio" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="http://www.linkedin.com/pub/thalia-bacilio-rojano/64/894/447" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.behance.net/Thaliabac" class="icon fa-behance"><span class="label">Behance</span></a></li>
+							<li><a href="mailto:baci0008@algonquinlive.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</footer>
 				</section>
@@ -119,7 +119,7 @@
 						<section id="three">
 							<div class="container">
 								<h3>My Services</h3>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+								<p>I offer a variety of graphic design services like: Branding, Print, App Design, Web Design and Motion to serve any of your needs.</p>
 								
 								
 							<ul class="grid2 cs-style-4">
@@ -249,7 +249,7 @@
 									<li>
 										<figure>
 											<figcaption>
-											<h3>Project #1 <a href="" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+											<h3>Project #1 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 											<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. </p>
 											</figcaption>
 											<img src="http://placehold.it/560x320" alt="img01">
@@ -259,7 +259,7 @@
 									<li>
 										<figure>
 											<figcaption>
-											<h3>Project #2 <a href="" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+											<h3>Project #2 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 											<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 											</figcaption>
 											<img src="http://placehold.it/560x320"alt="img02"/>
@@ -268,7 +268,7 @@
 									<li>
 										<figure>
 										<figcaption>
-													<h3>Project #3 <a href="" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3>Project #3 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
 												<img src="http://placehold.it/560x320" alt="img03"/>
@@ -277,7 +277,7 @@
 										<li>
 											<figure>
 												<figcaption>
-												<h3>Project #4 <a href="" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+												<h3>Project #4 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 												<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
 												<img src="http://placehold.it/560x320" alt="img04"/>
@@ -286,7 +286,7 @@
 										<li>
 											<figure>
 												<figcaption>
-													<h3>Project #5 <a href="" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3>Project #5 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
 												<img src="http://placehold.it/560x320" alt="img05"/>
@@ -295,7 +295,7 @@
 										<li>
 											<figure>
 												<figcaption>
-													<h3>Project #6 <a href="" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3>Project #6 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
 												<img src="http://placehold.it/560x320" alt="img06"/>
@@ -304,7 +304,7 @@
 										<li>
 											<figure>
 												<figcaption>
-													<h3>Project #7 <a href="" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3>Project #7 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
 												<img src="http://placehold.it/560x320" alt="img01"/>
@@ -313,7 +313,7 @@
 										<li>
 											<figure>
 												<figcaption>
-													<h3>Project #8 <a href="" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
+													<h3>Project #8 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
 												<img src="http://placehold.it/560x320" alt="img01"/>
