Fixing comment errors from github

--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
 <!doctype html>
 <html>
-		<head>
-		<meta charset="UTF-8">
-		<title>Thalia · Creative Graphic Designer</title>
-		<meta name="description" content="Thalia, Junior Graphic Designer, Portfolio, Ottawa, Canada">
-		<!-- Faebook Open graph meta tags. Also works on Pinterest -->
-		<meta property="og:type" content="website">
-		<meta property= "og:title" content="Thalia · Creative Graphic Designer · Portfolio">
-		<meta property= "og:url" content="http://wwww.thaliadesign.info">
-		<meta property= "og:site_name" content="Thalia Portfolio-Artwork">
-		<meta property= "og:description" content="Portfolio of Thalia, Original Graphic Designer at Ottawa, Canada">
-		<!-- Can have up to 5 images -->
-		<meta property= "og:image" content="">
-		<meta property= "og:image" content="">
-		<meta property= "og:image" content="">
-		<meta property= "og:image" content="">
-		<meta property= "og:image" content="">
-		<!-- Twitter meta tags -->
-		<meta name="twitter:card" content="gallery">
-		<meta name="twitter:title" content="">
-		<meta name="twitter:url" content="">
-		<meta name="twitter:description" content="">
-		<meta name="twitter:image0" content="">
-		<meta name="twitter:image1" content="">
-		<meta name="twitter:image2" content="">
-		<meta name="twitter:image3" content="">
+<head>
+	<meta charset="UTF-8">
+	<title>Thalia · Creative Graphic Designer</title>
+	<meta name="description" content="Thalia, Junior Graphic Designer, Portfolio, Ottawa, Canada">
+	<!-- Faebook Open graph meta tags. Also works on Pinterest -->
+	<meta property="og:type" content="website">
+	<meta property= "og:title" content="Thalia · Creative Graphic Designer · Portfolio">
+	<meta property= "og:url" content="http://wwww.thaliadesign.info">
+	<meta property= "og:site_name" content="Thalia Portfolio-Artwork">
+	<meta property= "og:description" content="Portfolio of Thalia, Original Graphic Designer at Ottawa, Canada">
+	<!-- Can have up to 5 images -->
+	<meta property= "og:image" content="">
+	<meta property= "og:image" content="">
+	<meta property= "og:image" content="">
+	<meta property= "og:image" content="">
+	<meta property= "og:image" content="">
+	<!-- Twitter meta tags -->
+	<meta name="twitter:card" content="gallery">
+	<meta name="twitter:title" content="">
+	<meta name="twitter:url" content="">
+	<meta name="twitter:description" content="">
+	<meta name="twitter:image0" content="">
+	<meta name="twitter:image1" content="">
+	<meta name="twitter:image2" content="">
+	<meta name="twitter:image3" content="">
 		
 	
-		<link rel="stylesheet" href="css/skel.css">
-		<link rel="stylesheet" href="css/style.css">
-		<link rel="stylesheet" href="css/style-xlarge.css">
+	<link rel="stylesheet" href="css/skel.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style-xlarge.css">
 		
-		<script type="text/javascript" src="js/modernizr.custom.79639.js"></script> <!-- Extra Portfolio Pieces -->
-		<script src="js/modernizr.custom.js"></script> 	<!-- General -->
-		
-		
-		</head>
+	<script type="text/javascript" src="js/modernizr.custom.79639.js"></script> <!-- Extra Portfolio Pieces -->
+	<script src="js/modernizr.custom.js"></script> 	<!-- General -->
+</head>
 
 <body>
 		<div id="wrapper">
@@ -61,7 +59,7 @@
 					<footer>
 						<ul class="icons">
 							<li><a href="https://twitter.com/ThaliaBacilio" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="http://www.linkedin.com/pub/thalia-bacilio-rojano/64/894/447" class="icon fa-linkedin"><span class="label">Facebook</span></a></li>
+							<li><a href="http://www.linkedin.com/pub/thalia-bacilio-rojano/64/894/447" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://www.behance.net/Thaliabac" class="icon fa-behance"><span class="label">Behance</span></a></li>
 							<li><a href="mailto:baci0008@algonquinlive.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
@@ -420,7 +418,7 @@ creative gusto to it.</p>
 									<li class="fa-phone">Phone</li>
 									<li>(613) 4000 3092</li> 
 										
-									<li class="fa-check-circle">Works Ours</li>
+									<li class="fa-check-circle">Work Hours</li>
 									<li>Monday - Friday <br>
 									9:00am - 17:00pm </li>
 								</ul>
