Added services javascript

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@ creative gusto to it.</p>
 			} );
 		</script>
 		
-		<!--<script src="js/toucheffects.js"></script> Services -->	
+		<script src="js/toucheffects.js"></script> <!--Services -->	
 		<script src="js/jquery.scrollzer.min.js"></script> <!-- General -->
 		<script src="js/jquery.scrolly.min.js"></script>
 		<script src="js/skel.min.js"></script>
