Fixed part of the slideshow

--- a/index.html
+++ b/index.html
@@ -440,6 +440,9 @@ creative gusto to it.</p>
 			</div>	<!-- Main -->
 		</div> <!--Close wrapper -->
 		
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script> <!-- Generela - Slideshow -->
+		
+		
 		<script src="js/imagesloaded.pkgd.min.js"></script> <!-- Portfolio -->
 		<script src="js/masonry.pkgd.min.js"></script> <!-- Portfolio -->
 		<script src="js/classie.js"></script> <!-- General -->
@@ -448,9 +451,9 @@ creative gusto to it.</p>
 			new CBPGridGallery( document.getElementById( 'grid-gallery' ) );
 		</script>
 							
-		<script src="js/jquery.min.js"></script> <!-- General -->
+	
 
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script> <!-- Slideshow -->
+	
 		<script src="js/jquery.flipshow.js"></script> <!-- Slideshow -->
 		<script>
 			$( function() {
