Fix about me small screen
My hover effect doesn’t work on cellphones. I changed to footnotes.

--- a/index.html
+++ b/index.html
@@ -95,9 +95,20 @@
 							<div class="container">
 												
 								<h2>About Me</h2>
-								<p>My name is Thalia Bacilio and these are some facts that I want you to know about me. I’m a junior graphic design 
+								<p>My name is Thalia Bacilio and these are some facts that I want you to know about me. I’m a junior graphic design<sup>1</sup>
 					  <a class="tooltip"><i class="fa fa-pencil"></i><span class="tooltip-content">Which means I found my passion in my professional life.</span></a> 
-					 in Ottawa, Ontario, Canada. For me design is problem solving in a visual way, which the two main elements are the aesthetics <a class="tooltip"><i class="fa fa-users"></i><span class="tooltip-content">That wow factor that stands up from others.</span></a> and purpose. <a class="tooltip"><i class="fa fa-thumbs-up"></i><span class="tooltip-content">If it is not functional, it is not worthy.</span></a> Something that I really enjoy is create and express myself through illustrations <a class="tooltip"><i class="fa fa-star"></i><span class="tooltip-content">Definitely, 100% my style. Thanks God for Adobe Illustrator!</span></a> is like a vibrant, childish, surrealism dreamworld. I believe that LOVE <a class="tooltip"><i class="fa fa-heart"></i><span class="tooltip-content">Jesus is love. 1 John 4:16.</span></a> is my air and food of each day inspiring me to always give my 100% in everything I do. Did you know that also I have International <a class="tooltip"><i class="fa fa-plane"></i><span class="tooltip-content">Mexico, El Salvador and coming soon Spain.</span></a> Experience? It is great to be part of a different culture getting involve with their customs and being inspire with their design trends. As a curiosities, I literally captivated by cupcakes, <a class="tooltip"><i class="fa fa-comment"></i><span class="tooltip-content">One day, I would have my own cupcake store and do all the branding for it.</span></a> creative packaging, food and I was named after a famous Mexican singer <a class="tooltip"><i class="fa fa-microphone"></i><span class="tooltip-content">My dad’s crush since his youth.</span></a></p> 
+					 in Ottawa, Ontario, Canada. For me design is problem solving in a visual way, which the two main elements are the aesthetics<sup>2</sup><a class="tooltip"><i class="fa fa-users"></i><span class="tooltip-content">That wow factor that stands up from others.</span></a> and purpose.<sup>3</sup><a class="tooltip"><i class="fa fa-thumbs-up"></i><span class="tooltip-content">If it is not functional, it is not worthy.</span></a> Something that I really enjoy is create and express myself through illustrations<sup>4</sup><a class="tooltip"><i class="fa fa-star"></i><span class="tooltip-content">Definitely, 100% my style. Thanks God for Adobe Illustrator!</span></a> is like a vibrant, childish, surrealism dreamworld. I believe that LOVE<sup>5</sup><a class="tooltip"><i class="fa fa-heart"></i><span class="tooltip-content">Jesus is love. 1 John 4:16.</span></a> is my air and food of each day inspiring me to always give my 100% in everything I do. Did you know that also I have International<sup>6</sup><a class="tooltip"><i class="fa fa-plane"></i><span class="tooltip-content">Mexico, El Salvador and coming soon Spain.</span></a> Experience? It is great to be part of a different culture getting involve with their customs and being inspire with their design trends. As a curiosities, I literally captivated by cupcakes,<sup>7</sup><a class="tooltip"><i class="fa fa-comment"></i><span class="tooltip-content">One day, I will have my own cupcake store and do all the branding for it.</span></a> creative packaging, food and I was named after a famous Mexican singer.<sup>8</sup><a class="tooltip"><i class="fa fa-microphone"></i><span class="tooltip-content">My dad’s crush since his youth.</span></a></p> 
+					 
+					 			<ol class="footnotes">
+									<li>Which means I found my passion in my professional life.</li>
+									<li>That wow factor that stands up from others.</li>
+									<li>If it is not functional, it is not worthy.</li>
+									<li>Definitely, 100% my style. Thanks God for Adobe Illustrator!</li>
+									<li>Jesus is love. 1 John 4:16.</li>
+									<li>Mexico, El Salvador and coming soon Spain.</li>
+									<li>One day, I will have my own cupcake store and do all the branding for it.</li>
+									<li>My dad’s crush since his youth.</li>
+								</ol>	
 			
 			
 								<div class="rectangle">
