Fixed nav bar for my slideshow - Porfolio
All screen sizes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	
 							<li><a href="#one" class="active fa fa-home">Home</a></li>
 							<li><a href="#two" class="fa fa-comment-o">About</a></li>
-							<li><a href="#three" class="fa fa-asterisk">Things I Can Do</a></li>
+							<li><a href="#three" class="fa fa-asterisk">Services</a></li>
 							<li><a href="#four" class="fa fa-paint-brush">Portfolio</a></li>
 							<li><a href="#five" class="fa fa-envelope-o">Contact</a></li>
 						</ul>
