Linked services images

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 							<ul class="grid2 cs-style-4">
 							<li>
 								<figure>
-									<div><img src="http://placehold.it/300x200" alt="Branding Logo"></div>
+									<div><img src="images/branding.jpg" alt="Branding Logo"></div>
 									<figcaption> 
 										<h4>Branding Storm</h4>
 										<span>Creating your brand or refinement to shine in a overloaded world.</span>
@@ -142,7 +142,7 @@
 							</li>
 							<li>
 								<figure>
-									<div><img src="http://placehold.it/300x200" alt="Print Logo"></div>
+									<div><img src="images/print.jpg" alt="Print Logo"></div>
 									<figcaption>
 										<h4>Print Roots</h4>
 										<span>Providing you all the printed materias that you need to leave your clients amazed.</span>
@@ -151,7 +151,7 @@
 							</li>
 							<li>
 								<figure>
-									<div><img src="http://placehold.it/300x200" alt="App Logo"></div>
+									<div><img src="images/app.jpg" alt="App Logo"></div>
 									<figcaption>
 										<h4>App Design</h4>
 										<span>Designing dazzling, smart and appealing mobile apps.</span>
@@ -160,7 +160,7 @@
 							</li>
 							<li>
 								<figure>
-									<div><img src="http://placehold.it/300x200" alt="Web Logo"></div>
+									<div><img src="images/web.jpg" alt="Web Logo"></div>
 									<figcaption>
 										<h4>WebU2-ix</h4>
 										<span>Creating a responsive and user experience websites with a touch of simplicity and clarity.</span>
@@ -169,7 +169,7 @@
 							</li>
 							<li>
 								<figure>
-									<div><img src="http://placehold.it/300x200" alt="Animation Logo"></div>
+									<div><img src="images/motion.jpg" alt="Animation Logo"></div>
 									<figcaption>
 										<h4>Animotion</h4>
 										<span>Going beyond through my motion graphics that clearly will add life and rhythm to your business.</span>
@@ -180,35 +180,35 @@
 						
 						<div class="features">
 									<article>
-										<div><img src="http://placehold.it/300x200" alt="Branding Logo"></div>
+										<div><img src="images/branding.jpg" alt="Branding Logo"></div>
 										<div class="inner">
 											<h4>Branding Storm</h4>
 											<p>Creating your brand or refinement to shine in a overloaded world.</p>
 										</div>
 									</article>
 									<article>
-										<div><img src="http://placehold.it/300x200" alt="Print Logo"></div>
+										<div><img src="images/print.jpg" alt="Print Logo"></div>
 										<div class="inner">
 											<h4>Print Roots</h4>
 											<p>Providing you all the printed materias that you need to leave your clients amazed.</p>
 										</div>
 									</article>
 									<article>
-										<div><img src="http://placehold.it/300x200" alt="App Logo"></div>
+										<div><img src="images/app.jpg" alt="App Logo"></div>
 										<div class="inner">
 											<h4>App Design</h4>
 											<p>Designing dazzling, smart and appealing mobile apps.</p>
 										</div>
 									</article>
 									<article>
-										<div><img src="http://placehold.it/300x200" alt="Web Logo"></div>
+										<div><img src="images/web.jpg" alt="Web Logo"></div>
 										<div class="inner">
 											<h4>WebU2-ix</h4>
 											<p>Creating a responsive and user experience websites with a touch of simplicity and clarity.</p>
 										</div>
 									</article>
 									<article>
-										<div><img src="http://placehold.it/300x200" alt="Animation Logo"></div>
+										<div><img src="images/motion.jpg" alt="Animation Logo"></div>
 										<div class="inner">
 											<h4>Animotion</h4>
 											<p>Going beyond through my motion graphics that clearly will add life and rhythm to your business.</p>
