--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@
 								
 								<div id="fc-slideshow" class="fc-slideshow">
 									<ul class="fc-slides">
-										<li><img src="http://placehold.it/400x400" alt="Quote 1"><h3>Q#1</h3></li>
-										<li><img src="http://placehold.it/400x400" alt="Quote 2"><h3>Q#2</h3></li>
-										<li><img src="http://placehold.it/400x400" alt="Quote 3"><h3>Q#3</h3></li>
-										<li><img src="http://placehold.it/400x400" alt="Quote 4"><h3>Q#4</h3></li>
+										<li><img src="images/q1.jpg" alt="Quote 1"><h3>Q#1</h3></li>
+										<li><img src="images/q2.jpg" alt="Quote 2"><h3>Q#2</h3></li>
+										<li><img src="images/q3.jpg" alt="Quote 3"><h3>Q#3</h3></li>
 									</ul>
 								</div> 
 								
