--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<section id="header" class="skel-layers-fixed">
 					<header>
 						<span class="image avatar"><img src="images/logo.svg" alt="Thalia's Logo"></span>
-						<h1 id="logo"><a href="">Thalia</a></h1>
+						<h1 id="logo">Design</h1>
 						<p>I conceive ideas and<br>
 						bring them to life!</p>
 					</header>
@@ -126,7 +126,7 @@
 					<!-- Three -->
 						<section id="three">
 							<div class="container">
-								<h3>My Services</h3>
+								<h2>My Services</h2>
 								<p>I offer a variety of graphic design services like: Branding, Print, App Design, Web Design and Motion to serve any of your needs.</p>
 									
 							<ul class="grid2 cs-style-4">
@@ -234,7 +234,7 @@
 			<!-- Four -->
 					<section id="four">
 					<div class="container">
-					<h3>Portfolio</h3>
+					<h2>Portfolio</h2>
 							
 						<div id="grid-gallery" class="grid-gallery">
 							<section class="grid-wrap">
@@ -272,8 +272,8 @@
 									</li>
 									<li>
 										<figure>
-											<img src="http://placehold.it/260x156"  alt="App">
-											<figcaption><h4>Project #6</h4><p>App</p></figcaption>
+											<img src="images/wittylock.jpg"  alt="App">
+											<figcaption><h4>WittyLock</h4><p>App</p></figcaption>
 										</figure>
 									</li>
 									<li>
@@ -344,7 +344,7 @@
 													<h3>Project #6 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
-												<img src="http://placehold.it/560x320" alt="img06">
+												<img src="images/wittylock.jpg" alt="Wittylock">
 											</figure>
 										</li>
 										<li>
@@ -426,7 +426,7 @@
 			<!-- Five -->
 					<section id="five">
 						<div class="container">
-						<h3>Contact Me</h3>
+						<h2>Contact Me</h2>
 							<h4>It all begins with a simple chat...</h4>
 							<p>If you have any comment, question or a project at the door, I’d love to hear from you and apply my
 creative gusto to it.</p>
