Adding portfolio pieces

--- a/index.html
+++ b/index.html
@@ -242,32 +242,32 @@
 									<li class="grid-sizer"></li><!-- for Masonry column width -->
 									<li>
 										<figure>
-											<img src="http://placehold.it/260x156" alt="Tea">
-											<figcaption><h4>Project #1</h4><p>Branding Tea-package</p></figcaption>
+											<img src="images/te.jpg" alt="Tea">
+											<figcaption><h4>TE</h4><p>Branding Tea-package</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
-											<img src="http://placehold.it/260x156"  alt="Juice">
-											<figcaption><h4>Project #2</h4><p>Branding Juice-Campaign Lorem Ipsum is simply dummy text of the printing.</p></figcaption>
+											<img src="images/frida.jpg"  alt="Frida">
+											<figcaption><h4>Frida Kahlo</h4><p>Branding Juice-Campaign Lorem Ipsum is simply dummy text of the printing.</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
-											<img src="http://placehold.it/260x156"  alt="Mustache">
-											<figcaption><h4>Project #3</h4><p>Branding Mustache-sauces</p></figcaption>
+											<img src="images/vid.jpg"  alt="LaVid">
+											<figcaption><h4>La Vid</h4><p>Branding Mustache-sauces</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
-											<img src="http://placehold.it/260x156"  alt="Chocolates">
-											<figcaption><h4>Project #4</h4><p>Print Evagelism Chocolates</p></figcaption>
+											<img src="images/frozen.jpg"  alt="Frozen">
+											<figcaption><h4>Frozen Posters</h4><p>Print Evagelism Chocolates</p></figcaption>
 										</figure>
 									</li>
 									<li>
 										<figure>
-											<img src="http://placehold.it/260x156"  alt="Gift-card">
-											<figcaption><h4>Project #5</h4><p>Print Frozen-gift cards </p></figcaption>
+											<img src="images/pet.jpg"  alt="PetCircus">
+											<figcaption><h4>Pet Circus</h4><p>Print Frozen-gift cards </p></figcaption>
 										</figure>
 									</li>
 									<li>
@@ -298,7 +298,7 @@
 											<h3>Project #1 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 											<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s. </p>
 											</figcaption>
-											<img src="http://placehold.it/560x320" alt="img01">
+											<img src="images/te.jpg" alt="Te">
 									
 										</figure>
 									</li>
@@ -308,7 +308,7 @@
 											<h3>Project #2 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 											<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 											</figcaption>
-											<img src="http://placehold.it/560x320" alt="img02">
+											<img src="images/frida.jpg" alt="Frida">
 										</figure>
 									</li>
 									<li>
@@ -317,7 +317,7 @@
 													<h3>Project #3 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
-												<img src="http://placehold.it/560x320" alt="img03">
+												<img src="images/vid.jpg" alt="LaVid">
 											</figure>
 										</li>
 										<li>
@@ -326,7 +326,7 @@
 												<h3>Project #4 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 												<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
-												<img src="http://placehold.it/560x320" alt="img04">
+												<img src="images/frozen.jpg" alt="Frozen">
 											</figure>
 										</li>
 										<li>
@@ -335,7 +335,7 @@
 													<h3>Project #5 <a href="https://www.behance.net/Thaliabac" class="button special small icon fa-behance"><span class="label">Behance</span></a></h3>
 													<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 												</figcaption>
-												<img src="http://placehold.it/560x320" alt="img05">
+												<img src="images/pet.jpg" alt="PetCircus">
 											</figure>
 										</li>
 										<li>
